Introdução ao Conteudo

--- a/Linguagem.html
+++ b/Linguagem.html
@@ -12,6 +12,20 @@
     </header>
     <section>
         <div>
+            <p>As figuras de linguagem servem para nos ajudar a expor<br/>
+               nossas ideias de forma mais inteligente e coesa com o assunto.<br/>
+               <br/>
+               E as figuras de linguagem que mais interessam são:
+            </p>
+            <ul>
+                <li>Antitese</li>
+                <li>Paradoxo</li>
+                <li>Ironia</li>
+                <li>Metonímia</li>
+                <li>Ambiguidade</li>
+            </ul>
+        </div>
+        <div>
             Explicação
         </div>
         <div>
