Explicação Completa do Conteudo com Exemplos

--- a/Linguagem.html
+++ b/Linguagem.html
@@ -21,19 +21,53 @@
                 <li>Antitese</li>
                 <li>Paradoxo</li>
                 <li>Ironia</li>
-                <li>Metonímia</li>
+                <li>Sinestesia</li>
                 <li>Ambiguidade</li>
             </ul>
         </div>
         <div>
-            Explicação
+            <h2>Antitese</h2>
+            <p>
+                É a figura de linguagem que se opõem<br/> 
+                numa mesma frase,palavras ou expressões de<br/>
+                sentido contrario,uma exposição de ideias opostas.
+            </p>
+            <p>Exemplo: "Tudo que é bom faz mal e bem"</p>
+            <h2>Paradoxo</h2>
+            <p>
+                É a reunião de ideias que se contradizem,<br/>
+                referindo-se uma à outra ou referindo-se<br/>
+                ambas ao mesmo termo na frase.
+            </p>
+            <p>Exemplo: "Quando uma pessoa congela,ela queima"</p>
+            <h2>Ironia</h2>
+            <p>
+                É o recurso na qual a pessoa diz uma coisa,porem<br/>
+                ela está se referindo a um sentido contrario (geralmente<br/>
+                usado de forma sarcastica ou depreciativa em relação<br/>
+                a outra pessoa).
+            </p>
+            <p>Exemplo: "Ele jogou os brinquedos das crianças no chão e xingou elas,que rapaz bonzinho"</p>
+            <h2>Sinestesia</h2>
+            <p>
+                É o cruzamento de sensações na mesma frase,uma<br/>
+                mistura dos 5 sentindos,geralmente usada de forma<br/>
+                puramente artistica.
+            </p>
+            <p>Exemplo: "O cheiro de flores tem uma cor avermelhada"</p>
+            <h2>Ambiguidade</h2>
+            <p>
+                Quando uma mesma frase apresenta<br/> 
+                duas ideias diferentes,de sentido ambíguo.
+            </p>
+            <p>Exemplo: "O professor da Maria terminou a aula fazendo marcações no seu caderno."</p>
         </div>
         <div>
-            Video-Aula
+            [Video-Aula]
         </div>
     </section>
     <footer>
-        Fim do Site
+        [Fim do Site]
     </footer>
     <script src="Linguagem.js"></script>
 </body>
