Aplicação de uma video-aula para aprofundamento do assunto

--- a/Linguagem.html
+++ b/Linguagem.html
@@ -63,7 +63,13 @@
             <p>Exemplo: "O professor da Maria terminou a aula fazendo marcações no seu caderno."</p>
         </div>
         <div>
-            [Video-Aula]
+            <h2>Aprofundamento</h2>
+            <p>
+                Se você quiser se aprofundar nos conhecimentos<br/>
+                sobre figuras de linguagem,logo abaixo há uma video-aula<br/>
+                que explica tudo sobre o assunto (Fonte:Descomplica)
+            </p>
+            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/xfjSzZf6JA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         </div>
     </section>
     <footer>
