--- a/Linguagem.html
+++ b/Linguagem.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Linguagem Figurada</h1>
+        <h1>Figuras de Linguagem</h1>
     </header>
     <section>
         <div>
