Cabeçalho com lista

--- a/Linguagem.html
+++ b/Linguagem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linguagem Figurada</title>
+    <title>Figuras de Linguagem</title>
     <link rel="stylesheet" type="text/css" href="Linguagem.css">
 </head>
 <body>
@@ -12,12 +12,12 @@
     </header>
     <section>
         <div>
-            <p>As figuras de linguagem servem para nos ajudar a expor<br/>
+            <p class="TextoT">As figuras de linguagem servem para nos ajudar a expor<br/>
                nossas ideias de forma mais inteligente e coesa com o assunto.<br/>
                <br/>
                E as figuras de linguagem que mais interessam são:
             </p>
-            <ul>
+            <ul class="lista">
                 <li>Antitese</li>
                 <li>Paradoxo</li>
                 <li>Ironia</li>
