Textos Principais Organizados

--- a/Linguagem.html
+++ b/Linguagem.html
@@ -25,46 +25,46 @@
                 <li>Ambiguidade</li>
             </ul>
         </div>
-        <div>
-            <h2>Antitese</h2>
-            <p>
+        <div id="Dev">
+            <h2 class=>Antitese</h2>
+            <p class="T">
                 É a figura de linguagem que se opõem<br/> 
                 numa mesma frase,palavras ou expressões de<br/>
                 sentido contrario,uma exposição de ideias opostas.
             </p>
-            <p>Exemplo: "Tudo que é bom faz mal e bem"</p>
+            <p class="T">Exemplo: "Tudo que é bom faz mal e bem"</p>
             <h2>Paradoxo</h2>
-            <p>
+            <p class="T">
                 É a reunião de ideias que se contradizem,<br/>
                 referindo-se uma à outra ou referindo-se<br/>
                 ambas ao mesmo termo na frase.
             </p>
-            <p>Exemplo: "Quando uma pessoa congela,ela queima"</p>
+            <p class="T">Exemplo: "Quando uma pessoa congela,ela queima"</p>
             <h2>Ironia</h2>
-            <p>
+            <p class="T">
                 É o recurso na qual a pessoa diz uma coisa,porem<br/>
                 ela está se referindo a um sentido contrario (geralmente<br/>
                 usado de forma sarcastica ou depreciativa em relação<br/>
                 a outra pessoa).
             </p>
-            <p>Exemplo: "Ele jogou os brinquedos das crianças no chão e xingou elas,que rapaz bonzinho"</p>
+            <p class="T">Exemplo: "Ele jogou os brinquedos das crianças no chão e xingou elas,que rapaz bonzinho"</p>
             <h2>Sinestesia</h2>
-            <p>
+            <p class="T">
                 É o cruzamento de sensações na mesma frase,uma<br/>
                 mistura dos 5 sentindos,geralmente usada de forma<br/>
                 puramente artistica.
             </p>
-            <p>Exemplo: "O cheiro de flores tem uma cor avermelhada"</p>
+            <p class="T">Exemplo: "O cheiro de flores tem uma cor avermelhada"</p>
             <h2>Ambiguidade</h2>
-            <p>
+            <p class="T">
                 Quando uma mesma frase apresenta<br/> 
                 duas ideias diferentes,de sentido ambíguo.
             </p>
-            <p>Exemplo: "O professor da Maria terminou a aula fazendo marcações no seu caderno."</p>
+            <p class="T">Exemplo: "O professor da Maria terminou a aula fazendo marcações no seu caderno."</p>
         </div>
         <div>
             <h2>Aprofundamento</h2>
-            <p>
+            <p class="T">
                 Se você quiser se aprofundar nos conhecimentos<br/>
                 sobre figuras de linguagem,logo abaixo há uma video-aula<br/>
                 que explica tudo sobre o assunto (Fonte:Descomplica)
