--- a/Linguagem.html
+++ b/Linguagem.html
@@ -62,14 +62,14 @@
             </p>
             <p class="T">Exemplo: "O professor da Maria terminou a aula fazendo marcações no seu caderno."</p>
         </div>
-        <div>
-            <h2>Aprofundamento</h2>
+        <div id="Pro">
+            <h2 class="Ap">Aprofundamento</h2>
             <p class="T">
                 Se você quiser se aprofundar nos conhecimentos<br/>
                 sobre figuras de linguagem,logo abaixo há uma video-aula<br/>
                 que explica tudo sobre o assunto (Fonte:Descomplica)
             </p>
-            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/xfjSzZf6JA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            <p><iframe width="580" height="335" src="https://www.youtube.com/embed/xfjSzZf6JA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         </div>
     </section>
     <footer>
