Funções Base das opções

--- a/Linguagem.html
+++ b/Linguagem.html
@@ -13,16 +13,16 @@
     <section>
         <div>
             <p class="TextoT">As figuras de linguagem servem para nos ajudar a expor<br/>
-               nossas ideias de forma mais inteligente e coesa com o assunto.<br/>
+               nossas ideias com mais expressividade no assunto.<br/>
                <br/>
                E as figuras de linguagem que mais interessam são:
             </p>
             <ul class="lista">
-                <li>Antitese</li>
-                <li>Paradoxo</li>
-                <li>Ironia</li>
-                <li>Sinestesia</li>
-                <li>Ambiguidade</li>
+                <li onclick="Antitese()">Antitese</li>
+                <li onclick="Paradoxo()">Paradoxo</li>
+                <li onclick="Ironia()">Ironia</li>
+                <li onclick="Sinestesia()">Sinestesia</li>
+                <li onclick="Ambiguidade()">Ambiguidade</li>
             </ul>
         </div>
         <div id="Dev">
@@ -72,9 +72,6 @@
             <p><iframe width="580" height="335" src="https://www.youtube.com/embed/xfjSzZf6JA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         </div>
     </section>
-    <footer>
-        [Fim do Site]
-    </footer>
     <script src="Linguagem.js"></script>
 </body>
 </html>
