--- a/Linguagem.html
+++ b/Linguagem.html
@@ -6,6 +6,7 @@
     <title>Figuras de Linguagem</title>
     <link rel="stylesheet" type="text/css" href="Linguagem.css">
 </head>
+    
 <body>
     <header>
         <h1>Figuras de Linguagem</h1>
@@ -67,7 +68,7 @@
             <p class="T">
                 Se você quiser se aprofundar nos conhecimentos<br/>
                 sobre figuras de linguagem,logo abaixo há uma video-aula<br/>
-                que explica tudo sobre o assunto (Fonte:Descomplica)
+                que explica tudo sobre o assunto (Fonte:<span><a href="https://www.youtube.com/user/sitedescomplica">Descomplica</a></span>)
             </p>
             <p><iframe width="580" height="335" src="https://www.youtube.com/embed/xfjSzZf6JA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         </div>
